@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2001--2022  The R Core Team.
+ *  Copyright (C) 2001--2023  The R Core Team.
  *  Copyright (C) 2003--2010  The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -547,6 +547,7 @@ static SEXP La_solve_cmplx(SEXP A, SEXP Bin)
     Adims = INTEGER(coerceVector(getAttrib(A, R_DimSymbol), INTSXP));
     n = Adims[0];
     if(n == 0) error(_("'a' is 0-diml"));
+    size_t nl = n;
     int n2 = Adims[1];
     if(n2 != n) error(_("'a' (%d x %d) must be square"), n, n2);
     Adn = getAttrib(A, R_DimNamesSymbol);
@@ -577,7 +578,7 @@ static SEXP La_solve_cmplx(SEXP A, SEXP Bin)
 	if (!isNull(Adn)) setAttrib(B, R_NamesSymbol, VECTOR_ELT(Adn, 1));
     }
     Bin = PROTECT(coerceVector(Bin, CPLXSXP));
-    Memcpy(COMPLEX(B), COMPLEX(Bin), (size_t)n * p);
+    Memcpy(COMPLEX(B), COMPLEX(Bin), nl * p);
 
     ipiv = (int *) R_alloc(n, sizeof(int));
 
@@ -586,8 +587,8 @@ static SEXP La_solve_cmplx(SEXP A, SEXP Bin)
 	A = coerceVector(A, CPLXSXP);
 	avals = COMPLEX(A);
     } else {
-	avals = (Rcomplex *) R_alloc((size_t)n * n, sizeof(Rcomplex));
-	Memcpy(avals, COMPLEX(A), (size_t) n * n);
+	avals = (Rcomplex *) R_alloc(nl * nl, sizeof(Rcomplex));
+	Memcpy(avals, COMPLEX(A), nl * nl);
     }
     PROTECT(A);
     F77_CALL(zgesv)(&n, &p, avals, &n, ipiv, COMPLEX(B), &n, &info);
@@ -1059,6 +1060,7 @@ static SEXP La_solve(SEXP A, SEXP Bin, SEXP tolin)
     int *Adims = INTEGER(coerceVector(getAttrib(A, R_DimSymbol), INTSXP));
     n = Adims[0];
     if(n == 0) error(_("'a' is 0-diml"));
+    size_t nl = n;
     int n2 = Adims[1];
     if(n2 != n) error(_("'a' (%d x %d) must be square"), n, n2);
     Adn = getAttrib(A, R_DimNamesSymbol);
@@ -1091,7 +1093,7 @@ static SEXP La_solve(SEXP A, SEXP Bin, SEXP tolin)
 	if (!isNull(Adn)) setAttrib(B, R_NamesSymbol, VECTOR_ELT(Adn, 1));
     }
     PROTECT(Bin = coerceVector(Bin, REALSXP));
-    Memcpy(REAL(B), REAL(Bin), (size_t)n * p);
+    Memcpy(REAL(B), REAL(Bin), nl * p);
 
     int *ipiv = (int *) R_alloc(n, sizeof(int));
 
@@ -1100,8 +1102,8 @@ static SEXP La_solve(SEXP A, SEXP Bin, SEXP tolin)
 	A = coerceVector(A, REALSXP);
 	avals = REAL(A);
     } else {
-	avals = (double *) R_alloc((size_t)n * n, sizeof(double));
-	Memcpy(avals, REAL(A), (size_t)n * n);
+	avals = (double *) R_alloc(nl * nl, sizeof(double));
+	Memcpy(avals, REAL(A), nl * nl);
     }
     PROTECT(A);
     int info;
@@ -1112,11 +1114,15 @@ static SEXP La_solve(SEXP A, SEXP Bin, SEXP tolin)
     if (info > 0)
 	error(_("Lapack routine %s: system is exactly singular: U[%d,%d] = 0"),
 	      "dgesv", info, info);
-    if(tol > 0) {
+    // LAPACK 3.11.0 fails here if A contains NaNs
+    int OK = 1;
+    for (size_t i = 0; i < nl*nl; i++)
+	if (!isfinite(avals[i])) {OK = 0; break;}
+    if(OK == 1 && tol > 0) {
 	char one[2] = "1";
 	anorm = F77_CALL(dlange)(one, &n, &n, REAL(A), &n,
 				 (double*) NULL FCONE);
-	work = (double *) R_alloc(4*(size_t)n, sizeof(double));
+	work = (double *) R_alloc(4*nl, sizeof(double));
 	F77_CALL(dgecon)(one, &n, avals, &n, &anorm, &rcond, work, ipiv,
 			 &info FCONE);
 	if (rcond < tol)
