@@ -160,4 +160,16 @@ solve(As)
 Ac <- A; Ac[] <- as.logical(diag(5))
 chol(Ac)
 
+##  -------  tests of non-finite values  -----------------
+
+a <- matrix(NaN, 3, 3,, list(one=1:3, two=letters[1:3]))
+b <- cbind(1:3, NA)
+dimnames(b) <- list(One=4:6, Two=11:12)
+bb <- 1:3; names(bb) <- 11:12
+## gave error with LAPACK 3.11.0
+solve(a, b)
+solve(a, bb)
+
+A <- a + 0i
+solve(A, b)
 
